sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sabnzbd-service
  name: sabnzbd-service
  namespace: media-tools
spec:
  type: ClusterIP
  ports:
  - port: 8079
    protocol: TCP
    targetPort: 8079
    name: web
  selector:
    app: sabnzbd
